[tool.poetry]
name = "dagster-sandbox"
version = "0.1.0"
description = ""
authors = ["Marcos Alcozer <marcos@alcozer.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
dagster = "^0.14.6"
dagit = "^0.14.6"
pandas = "^1.4.1"
dagster-gcp = "^0.14.6"
black = "^22.1.0"
tenacity = "^8.0.1"
dagster-dbt = "^0.14.8"
dbt-bigquery = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
